# rp2350-gameboy-cartridge-firmware

./: ARCHITECTURE.md  BUILD.md  Cargo.toml  PROTOCOL.md  THREAT_MODEL.md  USB_PROTOCOL.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
gb-bootloader/: bootloader.c  giraffe_4color_map.c
gb-wallet/: font.c  font.h  main.c  sram_comm.c  sram_comm.h  ui.c  ui.h
src/: boot_integrity.rs  crypto_rng.rs  gb_bootloader.rs  lib.rs  main.rs  stealth.rs
src/comm/: gb_channel.rs  mod.rs  usb_protocol.rs
src/wallet/: address.rs  bip32.rs  bip39.rs  encrypt.rs  keys.rs  mod.rs  psbt.rs  secure_memory.rs  state.rs  storage.rs
