[package]
edition = "2021"
name = "rp2350-gameboy-cartridge"
version = "0.1.0"
license = "GPLv3"


[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"] }

defmt = "0.3"
#defmt-rtt = "0.4"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
defmt-serial = { version = "0.10.0" }
fixed = "1.23.1"
fixed-macro = "1.2"
static_cell = "2.1"
arrayvec = { version = "0.7.6", default-features = false }
crc16 = "0.4.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
smart-leds = "0.3.0"

cstr_core = { version = "0.2.6", default-features = false }

rtcc = { version = "0.3.2" }

embedded-sdmmc = { version= "0.8.0", features = ["defmt-log"], default-features = false }

panic-probe = { version = "0.3", features = ["print-defmt"] }

# Wallet dependencies — Phase 3: Cryptographic foundation
# Using k256 (pure Rust) instead of secp256k1 (needs C compiler for ARM)
# heapless provides no_std Vec/String for address encoding
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "sha256"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
hkdf = { version = "0.12", default-features = false }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
heapless = { version = "0.8", default-features = false }
# RIPEMD-160 for address hashing (SHA256 then RIPEMD160 = HASH160)
ripemd = { version = "0.1", default-features = false }
# Minimal base58 for address encoding (legacy P2PKH, P2SH)
# We implement base58check ourselves to avoid extra dep

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }
