[package]
edition = "2021"
name = "rp2350-gameboy-cartridge"
version = "0.1.0"
license = "GPLv3"


[features]
default = ["embedded"]
embedded = [
    "dep:embassy-embedded-hal",
    "dep:embassy-sync",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-rp",
    "dep:embassy-usb",
    "dep:embassy-futures",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:critical-section",
    "dep:smart-leds",
    "dep:cstr_core",
    "dep:rtcc",
    "dep:embedded-sdmmc",
    "dep:panic-probe",
    "dep:embedded-hal-1",
    "dep:embedded-hal-bus",
    "dep:embedded-io",
    "dep:defmt-serial",
    "dep:fixed",
    "dep:fixed-macro",
]

[dependencies]
# Embedded deps (optional for host testing)
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"], optional = true }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"], optional = true }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"], optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt", "defmt-timestamp-uptime"], optional = true }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb", "binary-info"], optional = true }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"], optional = true }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "05a6f7a7957d891c20f00f428a36abb0da1c921a", features = ["defmt"], optional = true }

defmt = "0.3"
embedded-hal-1 = { package = "embedded-hal", version = "1.0", optional = true }
embedded-hal-bus = { version = "0.1", features = ["async"], optional = true }
embedded-io = { version = "0.6.1", features = ["defmt-03"], optional = true }
defmt-serial = { version = "0.10.0", optional = true }
fixed = { version = "1.23.1", optional = true }
fixed-macro = { version = "1.2", optional = true }
static_cell = "2.1"
arrayvec = { version = "0.7.6", default-features = false }
crc16 = "0.4.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
critical-section = { version = "1.1", optional = true }
smart-leds = { version = "0.3.0", optional = true }

cstr_core = { version = "0.2.6", default-features = false, optional = true }

rtcc = { version = "0.3.2", optional = true }

embedded-sdmmc = { version = "0.8.0", features = ["defmt-log"], default-features = false, optional = true }

panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

# Wallet dependencies — always available (pure Rust crypto, no_std compatible)
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "sha256"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
hkdf = { version = "0.12", default-features = false }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
heapless = { version = "0.8", default-features = false }
ripemd = { version = "0.1", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }
